--- a/operators/cloudnative-pg/2.0.9/ix_values.yaml
+++ b/operators/cloudnative-pg/2.0.9/ix_values.yaml
@@ -417,6 +417,16 @@ rbac:
           - patch
           - update
           - watch
+      - apiGroups:
+          - snapshot.storage.k8s.io
+        resources:
+          - volumesnapshots
+        verbs:
+          - create
+          - get
+          - list
+          - patch
+          - watch
 
 serviceAccount:
   main:
@@ -543,14 +553,16 @@ configmap:
                 description: "Time at which postgres started (based on epoch)"
 
         pg_replication:
-          query: "SELECT CASE WHEN NOT pg_catalog.pg_is_in_recovery()
+          query: "SELECT CASE WHEN (
+                    NOT pg_catalog.pg_is_in_recovery()
+                    OR pg_catalog.pg_last_wal_receive_lsn() = pg_catalog.pg_last_wal_replay_lsn())
                   THEN 0
                   ELSE GREATEST (0,
                     EXTRACT(EPOCH FROM (now() - pg_catalog.pg_last_xact_replay_timestamp())))
                   END AS lag,
                   pg_catalog.pg_is_in_recovery() AS in_recovery,
                   EXISTS (TABLE pg_stat_wal_receiver) AS is_wal_receiver_up,
-                  (SELECT count(*) FROM pg_stat_replication) AS streaming_replicas"
+                  (SELECT count(*) FROM pg_catalog.pg_stat_replication) AS streaming_replicas"
           metrics:
             - lag:
                 usage: "GAUGE"
@@ -571,7 +583,10 @@ configmap:
               slot_type,
               database,
               active,
-              pg_catalog.pg_wal_lsn_diff(pg_catalog.pg_current_wal_lsn(), restart_lsn)
+              (CASE pg_catalog.pg_is_in_recovery()
+                WHEN TRUE THEN pg_catalog.pg_wal_lsn_diff(pg_catalog.pg_last_wal_receive_lsn(), restart_lsn)
+                ELSE pg_catalog.pg_wal_lsn_diff(pg_catalog.pg_current_wal_lsn(), restart_lsn)
+              END) as pg_wal_lsn_diff
             FROM pg_catalog.pg_replication_slots
             WHERE NOT temporary
           metrics:
@@ -752,6 +767,7 @@ configmap:
            SELECT usename
              , COALESCE(application_name, '') AS application_name
              , COALESCE(client_addr::text, '') AS client_addr
+             , COALESCE(client_port::text, '') AS client_port
              , EXTRACT(EPOCH FROM backend_start) AS backend_start
              , COALESCE(pg_catalog.age(backend_xmin), 0) AS backend_xmin_age
              , pg_catalog.pg_wal_lsn_diff(pg_catalog.pg_current_wal_lsn(), sent_lsn) AS sent_diff_bytes
@@ -772,6 +788,9 @@ configmap:
             - client_addr:
                 usage: "LABEL"
                 description: "Client IP address"
+            - client_port:
+                usage: "LABEL"
+                description: "Client TCP port"
             - backend_start:
                 usage: "COUNTER"
                 description: "Time when this process was started"
