--- a/dependency/kube-state-metrics/3.0.39/questions.yaml
+++ b/dependency/kube-state-metrics/3.0.39/questions.yaml
@@ -708,7 +708,7 @@ questions:
                                   label: Paths
                                   schema:
                                     type: list
-                                    default: []
+                                    default: [{path: "/", pathType: "Prefix"}]
                                     items:
                                       - variable: pathEntry
                                         label: Host
