--- a/dependency/node-exporter/app_versions.json
+++ b/dependency/node-exporter/app_versions.json
@@ -4,13 +4,13 @@
         "supported": true,
         "healthy_error": null,
         "location": "/home/runner/work/catalog/catalog/dependency/node-exporter/3.0.43",
-        "last_update": "2023-11-17 22:37:57",
+        "last_update": "2023-11-17 23:33:13",
         "required_features": [
-            "definitions/gpuConfiguration",
-            "definitions/timezone",
-            "definitions/certificate",
             "definitions/interface",
-            "normalize/interfaceConfiguration"
+            "normalize/interfaceConfiguration",
+            "definitions/timezone",
+            "definitions/gpuConfiguration",
+            "definitions/certificate"
         ],
         "human_version": "1.7.0_3.0.43",
         "version": "3.0.43",
