--- a/dependency/kube-state-metrics/app_versions.json
+++ b/dependency/kube-state-metrics/app_versions.json
@@ -4,13 +4,13 @@
         "supported": true,
         "healthy_error": null,
         "location": "/home/runner/work/catalog/catalog/dependency/kube-state-metrics/3.0.41",
-        "last_update": "2023-11-17 23:33:13",
+        "last_update": "2023-11-18 22:25:40",
         "required_features": [
             "definitions/interface",
-            "normalize/interfaceConfiguration",
+            "definitions/certificate",
             "definitions/timezone",
             "definitions/gpuConfiguration",
-            "definitions/certificate"
+            "normalize/interfaceConfiguration"
         ],
         "human_version": "2.10.1_3.0.41",
         "version": "3.0.41",
